--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+ <div class="wrapper">
                 <header>
 
                         <h1><span class="fw">Darmowa</span> wtyczka do rabatów</h1>
